add put and delete functions

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <h1>HTTP Sample</h1>
     <div>
         <button id="getUsers">getUsers</button>
+        <button id="getUser1">getUser1</button>
         <button id="postUser">postUser</button>
+        <button id="updateUser">updateUser</button>
+        <button id="deleteUser">deleteUser</button>
     </div>
     <script src="./dist/bundle.js"></script>
 
